Fix status bubble causing Chrome to unhide.

Telling the status bubble to orderFront: without adding it as a child of
the browser window caused Chrome to unhide (e.g. if the bubble appeared
due to background network activity when Chrome was hidden with cmd+H).

Just adding it as a child is enough to show it, and doesn't trigger this
problem, so remove -orderFront:.

Bug: 783521
Change-Id: Ic2c94b0d90d43771a95774e010ad1799feeb8b32
Reviewed-on: https://chromium-review.googlesource.com/782665
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#520189}
Former-commit-id: ed213854ffb5242584658b65a53081ff36ebaaa1