chrome/browser/ui/cocoa/status_bubble_mac.mm
@@ -473,10 +473,7 @@ void StatusBubbleMac::Create() {
 void StatusBubbleMac::Attach() {
   if (is_attached())
     return;
-
-  [window_ orderFront:nil];
   [parent_ addChildWindow:window_ ordered:NSWindowAbove];
-
   [[window_ contentView] setThemeProvider:parent_];
 }
 
